[package]
name = "internal-api"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1", "serde"] }
tokio-postgres = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
tonic = "0.12"
prost = "0.13.5"

[build-dependencies]
tonic-build = "0.12.3"